# quadmat-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
bench/: CMakeLists.txt  README.md  benchmark_utilities.h  config_settings_bench.cpp  lookup_bench.cpp  misc_bench.cpp  parse_bench.cpp  search_bench.cpp  spa_bench.cpp  testing_bench.cpp
cmake/: README.md
include/: block.h  block_container.h  config.h  csc_block.h  dcsc_accumulator.h  dcsc_block.h  generators.h  inner_block.h  matrix.h  quadmat.h  single_block_container.h  spa.h  tree_nodes.h  tree_visitors.h  triples_block.h  types.h  util.h
include/algorithms/: multiply.h  multiply_leaves.h  multiply_trees.h
include/generators/: base_tuple_iterators.h  full_tuples_generator.h  identity_tuples_generator.h  simple_tuple_generator.h  tuple_generators.h
include/io/: simple_matrix_market.h
include/quadmat/: config.h  matrix.h  quadmat.h  spa.h
include/quadmat/algorithms/: algorithms.h  dcsc_accumulator.h  dense_spa.h  map_spa.h  multiply_leaves.h  multiply_trees.h  spa.h  sparse_spa.h
include/quadmat/executors/: direct_task_queue.h  task.h
include/quadmat/generators/: full_tuples_generator.h  identity_tuples_generator.h  matrix_generators.h  simple_tuple_generator.h  tuple_generators.h
include/quadmat/io/: simple_matrix_market.h
include/quadmat/quadtree/: block.h  block_container.h  future_block.h  inner_block.h  parallel_tree_destructor.h  shadow_subdivision.h  single_block_container.h  tree_construction.h  tree_nodes.h  tree_visitors.h
include/quadmat/quadtree/leaf_blocks/: csc_block.h  dcsc_block.h  triples_block.h  window_shadow_block.h
include/quadmat/util/: base_iterators.h  stream_chunker.h  types.h  util.h
test/: CMakeLists.txt  README.md  matrix_construction.cpp  problem_generator.h  tbb_present.cpp  test_block_container.cpp  test_dcsc_accumulator.cpp  test_dcsc_block.cpp  test_io.cpp  test_matrix_construction.cpp  test_multiply.cpp  test_shadow_subdivision.cpp  test_spa.cpp  test_tree_construction.cpp  test_tree_nodes.cpp  test_triple_block.cpp  test_tuple_generators.cpp  test_util.cpp  test_window_shadow_block.cpp  testing_utilities.h
test/matrices/: kepner_gilbert_graph_squared.mtx
test/matrices/medium/multiply/: README.md
test/matrices/unit/: kepner_gilbert_graph_squared.mtx
test/matrices/unit/multiply/Kepner-Gilbert graph squared/: a.mtx
test/matrices/unit/multiply/row_perm 3Dtorus scale 3/: a.mtx  product_ab.mtx
test/matrices/unit/multiply/row_perm 3DtorusRP scale 3/: product_ab.mtx
test/matrices/unit/multiply/row_perm ER scale 3/: a.mtx  product_ab.mtx
test/matrices/unit/multiply/square 3Dtorus scale 3/: a.mtx  product_ab.mtx
test/matrices/unit/multiply/square 3DtorusRP scale 3/: b.mtx  product_ab.mtx
test/matrices/unit/multiply/square ER scale 3/: b.mtx  product_ab.mtx
test/matrices/unit/multiply/square Kepner-Gilbert graph/: a.mtx
test/matrices/unit/multiply/submatrix ER scale 3/: a.mtx  c.mtx  product_abc.mtx
test/medium/: medium_main.cpp  multiply_medium_test.cpp
test/quadmat/: matrix_test.cpp  test_tbb_present.cpp
test/quadmat/algorithms/: dcsc_accumulator_test.cpp  multiply_test.cpp  spa_test.cpp
test/quadmat/generators/: tuple_generators_test.cpp
test/quadmat/io/: simple_matrix_market_test.cpp
test/quadmat/quadtree/: block_container_test.cpp  inner_block_test.cpp  shadow_subdivision_test.cpp  tree_construction_test.cpp  tree_nodes_test.cpp  tree_visitors.cpp
test/quadmat/quadtree/leaf_blocks/: dcsc_block_test.cpp  triple_block_test.cpp  window_shadow_block_test.cpp
test/quadmat/util/: util_test.cpp
test/test_dependencies/: README.md
test/test_dependencies/ghc/: filesystem.hpp
test/test_utilities/: problem_generator.h  problem_loader.h  problem_structs.h  problems.h  testing_utilities.h  tuple_dumper.h
test/unit/quadmat/: matrix_test.cpp  tbb_present_test.cpp  test_tbb_present.cpp
test/unit/quadmat/algorithms/: dcsc_accumulator_test.cpp  multiply_test.cpp  spa_test.cpp
test/unit/quadmat/generators/: tuple_generators_test.cpp
test/unit/quadmat/io/: simple_matrix_market_test.cpp
test/unit/quadmat/quadtree/: block_container_test.cpp  inner_block_test.cpp  parallel_tree_destructor_test.cpp  shadow_subdivision_test.cpp  tree_construction_test.cpp  tree_nodes_test.cpp  tree_visitors.cpp
test/unit/quadmat/quadtree/leaf_blocks/: dcsc_block_test.cpp  triple_block_test.cpp  window_shadow_block_test.cpp
test/unit/quadmat/util/: stream_chunker_test.cpp  util_test.cpp
test/unit/test/: testing_utilities_test.cpp
